[package]
name = "declio_derive"
version = "0.3.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"
description = "Derive macros for declio"
repository = "https://github.com/agausmann/declio"
license = "MIT"
keywords = ["binary", "io", "declarative", "bidirectional"]
categories = ["encoding", "parsing"]

[features]
async = []

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2"
